[Android, Cast] Fix crash when the second video is cast.

HTMLMediaElement may destroy WebMediaPlayerImpl when
handling disconnect from a remote device so WMPI shouldn't
do anything after calls to |client_|.

BUG=738677
TEST=follow the steps from the bug with the link from #c18

Change-Id: I59b299acc9740644bb046737419066734a870dc4
Reviewed-on: https://chromium-review.googlesource.com/576473
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Anton Vayvod <avayvod@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488001}
Former-commit-id: fad2f3ea3dce44b8822679e28041ee34ebc44bde